--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ I used the XYscope Examples to understand how to make the most of the Oscillosco
 	<h2>
 
 <form>
-	<label for ="samplecode"> Here's one OG Code which was the coolest of the lot: </label><br>
+	<label for ="samplecode"> Here's a sample code: </label><br>
 <br>
 <textarea rows = "30" cols="60" style="background-color:#90ee90;">
 import xyscope.*; 
@@ -82,43 +82,9 @@ void draw () {
 
 </textarea>
 
-	<div id="ogcode">
-	<p>What is "OG Code"?<br>
-		Code typed via memory and not through tutorials, examples or the use of libraries.<br> Its a flex.<br>
-	</p>
-</div>
 <br>
-Behind the Scenes</h2>
+Behind the Scenes:</h2>
 </div>
-
-	<div id="skillscontent">
-		<p>
-	<!-- 	<link href="https://fonts.googleapis.com/css?family=Scope+One" rel="stylesheet"> -->
-			I initially wanted to work with typography and explore how I can  use code to transform <br>words/letters. For this I explored a bunch of different libraries. I further wanted <br> to see how Indic scripts like Gurmukhi and Devanagri would look on such a format. <br> 
-		<br>
-Successes:<br>
-		<br>
-		Happy with the discovery and use of so many libraries.<br>
-		Understanding the nature of coding language better.<br>
-		Easily picked up HTML with CSS stlying for this website.<br>
-		Happy with cool visuals of the oscilloscope including a few using completely <br>original code. Say whaaa!<br>
-		<br>
-
-			Hurdles:<br>
-		<br>
-		I couldn't figure out how to  get the right 'matras' in the <br> typesetting as I couldn't see the characters in the text editor. <br>
-		Struggled to create my own code from scratch without relying on examples<br>
-		General incompetency in coding language.<br>
-	<br>
-	Goals:	<br>
-	<br>
-	I realised its much better to work with simple code using shapes, <br>loops, sin, rotate etc as it remains short yet fun. <br>
-	I aim to create smaller (less scary) code to really 'play' with the tool.<br>
-	Sometimes, simple code is all you need.<br>
-	<br>
-	Below are some screen recordings of my processing sketches:<br>
-	</p>
-	</div>
 
 
 <div class="row">
